--- a/templates/wrhost.conf
+++ b/templates/wrhost.conf
@@ -3,8 +3,8 @@ server {
 
     server_name {{ item.server_name }};
 
-    ssl_certificate /var/lib/dehydrated/certs/{{ cert_key_name }}/fullchain.pem;
-    ssl_certificate_key /var/lib/dehydrated/certs/{{ cert_key_name }}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ cert_key_name }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ cert_key_name }}/privkey.pem;
 
     ssl_session_cache shared:le_nginx_SSL:1m;
     ssl_session_timeout 1440m;
@@ -41,7 +41,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
 
-        #add_header content-security-policy "default-src 'unsafe-eval' 'unsafe-inline' 'self' data: blob: ws: wss: {{ wr_content_host }} form-action 'self'";
+        add_header content-security-policy "default-src 'unsafe-eval' 'unsafe-inline' 'self' data: blob: ws: wss: {{ wr_content_host }} form-action 'self'";
     }
 
     location /_client_ws {
@@ -96,5 +96,13 @@ server {
 
     {% endif %}
 
+}
+
+server {
+    listen 80;
+
+    server_name {{ item.server_name }};
+
+    return 301 https://{{ item.server_name }}$request_uri;
 }
 
