--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -14,28 +14,6 @@
     name: www-data
     append: yes
     groups: ssl-cert
-
-- name: copy new default site
-  copy:
-    src: default
-    dest: /etc/nginx/sites-available/default
-  notify: restart nginx
-
-- name: flush handlers
-  meta: flush_handlers
-
-- name: set up ssl
-  include_role:
-    name: dehydrated
-
-
-- name: copy wrhost template
-  template:
-    src: wrhost.j2
-    dest: '/etc/nginx/sites-available/{{ item.filename }}'
-  with_items: "{{ nginx_vhosts }}"
-  notify: restart nginx
-
 - name: enable only our sites
   file:
     path: '/etc/nginx/sites-enabled/'
@@ -46,13 +24,42 @@
     path: '/etc/nginx/sites-enabled'
     state: directory
 
+- name: copy new default site
+  copy:
+    src: default
+    dest: /etc/nginx/sites-available/default
+  notify: restart nginx
+
+- name: copy new default site - temp ssl
+  copy:
+    src: default
+    dest: /etc/nginx/sites-enabled/default
+  notify: restart nginx
+
+- name: flush handlers
+  meta: flush_handlers
+
+- name: set up ssl
+  include_role:
+    name: dehydrated
+
+- name: run dehydrated
+  command: dehydrated -c
+
+- name: copy wrhost template
+  template:
+    src: wrhost.j2
+    dest: '/etc/nginx/sites-available/{{ item.filename }}'
+  with_items: "{{ nginx_vhosts }}"
+  notify: restart nginx
+
+
 - name: enable only our sites
   file:
     path: '/etc/nginx/sites-enabled/{{ item }}'
     src: '/etc/nginx/sites-available/{{ item }}'
     state: link
   with_items:
-    - default
     - '{{ wr_app_host }}'
     - '{{ wr_content_host }}'
   notify: restart nginx
