--- a/webrecorder.yml
+++ b/webrecorder.yml
@@ -4,10 +4,11 @@
   vars:
     wr_repo: 'https://github.com/zo-edv/webrecorder'
     wr_dir: /opt/webrecorder
-    wr_app_host: 'cats-dev01.cats.uni-heidelberg.de'
-    wr_content_host: 'cats-test.illegal.cloud'
+    wr_app_host: 'wr-app.cats.uni-heidelberg.de'
+    wr_content_host: 'wr-content.cats.uni-heidelberg.de'
 
-    wr_ldap_uri: 'ldap://ad.uni-heidelberg.de'
+    wr_ldap_domain: 'ad.uni-heidelberg.de'
+    wr_ldap_uri: 'ldap://{{ wr_ldap_domain }}'
 
     wr_remote_browsers:
       - 'chrome:53'
