--- a/webrecorder.yml
+++ b/webrecorder.yml
@@ -9,6 +9,8 @@
 
     wr_ldap_domain: 'ad.uni-heidelberg.de'
     wr_ldap_uri: 'ldap://{{ wr_ldap_domain }}'
+    wr_ldap_base: 'DC=ad,DC=uni-heidelberg,DC=de'
+    wr_ldap_admin_group: 'CATS_Users_IT'
 
     wr_remote_browsers:
       - 'chrome:53'
@@ -39,4 +41,3 @@
    # - { role: dehydrated, become: true, become_user: root, when: "wr_app_host != ''" }
     - { role: geerlingguy.docker, become: true, become_user: root }
     - { role: webrecorder_init }
-
