--- a/webrecorder.yml
+++ b/webrecorder.yml
@@ -10,7 +10,7 @@
     wr_ldap_domain: 'ad.uni-heidelberg.de'
     wr_ldap_uri: 'ldap://{{ wr_ldap_domain }}'
     wr_ldap_base: 'DC=ad,DC=uni-heidelberg,DC=de'
-    wr_ldap_admin_group: 'CATS_Users_IT-WebrecorderAdmins'
+    wr_ldap_admin_group: 'CN=CATS_Users_IT-WebrecorderAdmins,OU=IT-Groups,OU=Groups,OU=cats,OU=Institute,DC=ad,DC=uni-heidelberg,DC=de'
 
     wr_remote_browsers:
       - 'chrome:53'
