--- a/webrecorder.yml
+++ b/webrecorder.yml
@@ -11,6 +11,9 @@
     wr_ldap_uri: 'ldap://{{ wr_ldap_domain }}'
     wr_ldap_base: 'DC=ad,DC=uni-heidelberg,DC=de'
     wr_ldap_admin_group: 'CN=CATS_Users_IT-WebrecorderAdmins,OU=IT-Groups,OU=Groups,OU=cats,OU=Institute,DC=ad,DC=uni-heidelberg,DC=de'
+    wr_ldap_login_group: 'CN=CATS_Users_IT-WebrecorderUsers,OU=IT-Groups,OU=Groups,OU=cats,OU=Institute,DC=ad,DC=uni-heidelberg,DC=de'
+    wr_review_mail: 'benedikt.koblenz@zo.uni-heidelberg.de'
+    wr_smtp_url: 'smtp://mail.urz.uni-heidelberg.de:587'
 
     wr_remote_browsers:
       - 'chrome:53'
