--- a/roles/webrecorder_init/tasks/main.yml
+++ b/roles/webrecorder_init/tasks/main.yml
@@ -32,6 +32,7 @@
       - { regexp: 'LDAP_LOGIN_GROUP=', replace: 'LDAP_LOGIN_GROUP={{ wr_ldap_login_group }}' }
       - { regexp: 'REVIEWER_EMAIL=', replace: 'REVIEWER_EMAIL={{ wr_review_mail }}' }
       - { regexp: 'SMTP_URL=', replace: 'SMPT_URL={{ wr_smtp_url }}' }
+      - { regexp: 'EMAIL_SENDER=', replace: 'EMAIL_SENDER={{ wr_mail_sender }}' }
 
   - name: 'WR Run Docker Compose'
     become: true
